app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.

 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 */

@import "intro.js/introjs";
@import "select2/dist/css/select2.min";
@import "bulma/sass/utilities/initial-variables";
@import "bulma/sass/utilities/functions";
@import "variables";
@import "bulma/bulma";
@import "bulma-extensions/bulma-timeline/dist/css/bulma-timeline";
@import "./**/*";

html,
body {
    font-family: 'Open Sans', serif;
    font-size: 16px;
    max-width: 100%;
    overflow-x: hidden;
    height: 100%;
}

body section {
    padding: 72px 10px 0px 10px;
    margin-bottom: 72px;
}

.signed-out body section {
    padding-top: 80px;
}

body {
    background-color: #FAACA8;
    background-image: linear-gradient(180deg, #C59EDB 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #DF5977 0%, rgba(223, 89, 119, 0.1) 100%);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center center;
}

.tooltip-class {
    padding:16px;
    text-align: center;
}

.tooltip-class img {
    margin-bottom: 16px;
    width: auto;
    height: 200px;
}

.sub-menu {
    margin-top: 32px;
}

.navbar img {
    max-height: 2.55rem;
}

.card {
    margin-top: 24px;
    margin-bottom: 24px;
    border-radius: 8px;
    overflow: hidden;
}

.card-footer .columns {
    width: 100%;
}

.card-footer .columns input {
    border: none;
    border-radius: 0;
    box-shadow: none;
}

.profile-card {
    height: 100%;
}

.footer {
    margin-top: 10vh;
    padding: 2rem 1.5rem;
}

.modal.is-active .modal-background {
    opacity: 0.8;
}

.modal-content {
    max-height: 100%;
}

.modal-content .card {
    padding:16px;
}

.image-upload>input {
    display: none;
}

.image-upload>label {
    cursor: pointer;
}

.user-avatar.image {
    max-height: 400px;
    overflow: hidden;
}

.hidden {
    display: none;
}

.mobile-navbar {
    background-color: #F8F8F8;
    border-top: 1px solid #E7E7E7;
    text-align: center;
    font-size: 16px;

    position: fixed;
    left: 0;
    bottom: 0;
    height: 60px;
    width: 100%;
}

.card-footer-item {
    padding: 0px !important;
}

.no-border {
    width: 100%;
    border: 0px !important;
}

.no-border:focus, .no-border:hover {
    outline: none !important;
    box-shadow: none !important;
}

.new-project-button {
    position: fixed;
    width: 60px;
    height: 60px;
    bottom: 70px;
    right: 10px;
    background-color: $purple;
    color: #FFF;
    border-radius: 50px;
    text-align: center;
    box-shadow: 2px 2px 3px #999;
}

.float {
    margin-top: 22px;
}

.tabs li a {
    background-color: white;
}

.tabs.is-toggle a,
.tabs.is-toggle a:hover {
    border-color: #a896e0;
}

.tabs.is-toggle li.is-active a {
    background-color: #8045A1;
    border-color: #8045A1;
}

.tab-content {
    display: none;

    &.is-active {
        display: block;
    }
}

@include touch {
    .navbar-brand {
        justify-content: center;
    }
}

